--- a/Lab1/Lab1Task3/Lab1Task3.vcxproj
+++ b/Lab1/Lab1Task3/Lab1Task3.vcxproj
@@ -18,19 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Lab1Task2.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\Lab1\dat_X_00_1.dat" />
-    <None Include="..\Lab1\dat_X_1_00.dat" />
-    <None Include="..\Lab1\dat_X_1_1.dat" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{0d7ebc50-f03c-45fb-ac26-65a2b7c58173}</ProjectGuid>
-    <RootNamespace>Lab12</RootNamespace>
+    <ProjectGuid>{f38c5cba-c32e-4489-ba9c-4c121b3bf7c2}</ProjectGuid>
+    <RootNamespace>Lab1Task3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -134,6 +126,14 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="Lab1Task3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Lab1\dat_X_00_1.dat" />
+    <None Include="..\Lab1\dat_X_1_00.dat" />
+    <None Include="..\Lab1\dat_X_1_1.dat" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
